--- a/Angular/package.json
+++ b/Angular/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@zxing/ngx-scanner": "^2.0.1",
     "angular-barcode-scanner": "^1.3.1",
     "hammerjs": "^2.0.8",
+    "ngx-barcode-scanner": "0.0.6",
     "quagga": "^0.12.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
